# Ignis

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  README.md  source.bat  source.ps1  source.sh
docs/: .buildinfo  AnyDSLWindows.patch  CMakeLists.txt  README.md  Requirements.txt  TutorialEvalglare.md  TutorialSetup.md  TutorialSetupWindows.md  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst  index.rst.txt
docs/_static/: pygments.css
docs/exts/: objectparameters.py  pythonfunc.py  subfig.py
docs/funding/: README.md
docs/html/: genindex.html  search.html  searchindex.js
docs/refs/: example.json  ignis.schema.json
scenes/: CMakeLists.txt  README.md  arrays.json  arrays_roughness_metallic.json  axis.json  box_enclosed_env.json  brtdfunc_sandbox.json  diamond_scene.json  diamond_scene.xml  diamond_scene_measured.json  diamond_scene_neural.json  diamond_scene_photonmapper.json  diamond_scene_uniform.json  diamond_scene_uniform_closed.json  disp_rect.json  disp_rect_color.json  disp_rect_light.json  disp_test.json  displacement.json  emissive_sphere.json  environment_map.json  environment_map_scene.json  flipped_prim.json  furnance.json  gauss.json  gauss_lobe.json  glass_plane.json  inverted_entity.json  klems_scene.json  many_point_lights.json  many_point_lights_scene.json  masked_plane.json  material_showcase.json  media_scene.json  parameter_plane.json  participating_media.json  participating_media_reference.json  perez.json  pillar.json  pillar_scene.json  (+27 more)
scenes/DavidsRoom/: room.json
scenes/bedroom/: iscv2.mtl
scenes/brdf/: README.md
scenes/breakfast_room/: breakfast_room.json  breakfast_room_fixed.mtl
scenes/church/: church.json  cool.mtl
scenes/classroom/: ReadMe.txt  classroom.json
scenes/evaluation/: MakeFigure.py  README.md  cbox-base.json  cbox-d1.json  cbox.json  cycles-box.json  cycles-bumpmap.json  cycles-env.json  cycles-lights-lt.json  cycles-lights-ppm.json  cycles-lights.json  cycles-mix-diff-diff.json  cycles-mix-diff-trans.json  cycles-mix-trans-trans.json  cycles-normalmap.json  cycles-principled.json  cycles-roughness-base.json  cycles-roughness-raniso.json  cycles-roughness-rxry.json  cycles-sun.json  cycles-tex.json  emissive-plane-nopt.json  emissive-plane-scale-nopt.json  emissive-plane-scale.json  emissive-plane-scale.xml  emissive-plane.json  env.json  env4k-base.json  env4k-conditional.json  env4k-hierachical.json  env4k-nocdf.json  env4k-nomisc.json  env4k-none.json  env4k-sat.json  env4k.json  env4kNoCDF.json  flipped-prim-base.json  flipped-prim-diffuse.json  flipped-prim-glass.json  multilight-hierarchy.json  (+54 more)
scenes/fireplace_room/: fireplace_room.json
scenes/glTF/: README.md
scenes/indirect_cornell/: indirect_cornell.json
scenes/leinarts_sponza/: leinarts_sponza.json  sponza.mtl
scenes/living_room/: living_room.json
scenes/meshes/: Back.ply  Bottom.ply  Diamond.ply  IgnisSocket.ply  IgnisSphere.ply  Left.ply  Office.blend  Pillar.ply  Right.ply  Room.ply  RoomWindow.ply  Sphere.ply  SphereTri.ply  Top.ply  dobj.ply
scenes/radiance/: simple_klems_spot_front_refl.xml  simple_klems_spot_refl.xml  simple_klems_spot_refl_trans.xml  simple_klems_spot_trans.xml  simple_klems_through_front_trans.xml  simple_klems_through_refl.xml  simple_klems_through_trans.xml  simple_tensor_d2_line_refl.xml  simple_tensor_d2_refl.xml  simple_tensor_d2_t3_refl.xml  simple_tensor_d2_t3_trans.xml  simple_tensor_d2_trans.xml  simple_tensor_d3_refl.xml  simple_tensor_d3_t3_refl.xml  simple_tensor_front_refl.xml  simple_tensor_refl.xml  simple_tensor_spot_refl.xml  simple_tensor_spot_t3_trans.xml  simple_tensor_spot_trans.xml  simple_tensor_trans.xml  test_xform_rad.rad
scenes/radiance_scenes/: alb10_room.rad  cornell.rad  test_polygon.rad  test_xform_geometry.rad
scenes/scripts/: WhiteInfinite.py
scenes/showcase/: base.json  blend.json  bumpmap.json  conductor.json  dielectric.json  diffuse.json  normalmap.json  roughdiffuse.json  roughplastic.json  run_all.sh
scenes/small_living_room/: 72364 - Living Room - License.html  LR.json  small_living_room.json
scenes/sponza_raw/: sponza.json
scenes/test/: test.json
scenes/textures/: Readme.md  Readme.txt
scenes/veach_ajar/: scene_v0.6.xml  veach_ajar.json  veach_ajar_diffuse.json
scripts/blender_exporter/: CMakeLists.txt  README.md  build_blender.bat  build_blender.sh  readme.md
src/: CMakeLists.txt  README.md
src/artic/: CMakeLists.txt  dummy_extra.art  dummy_main.art  dummy_main.impala
src/backend/: CMakeLists.txt
src/compiler/: CMakeLists.txt  CompilerOptions.cpp  CompilerOptions.h  main.cpp
src/device/: CMakeLists.txt  Compiler.cpp  Compiler.h  Device.cpp  Device.h  Interface.cpp
src/driver/: CMakeLists.txt  Interface.cpp  Interface.h  Pose.cpp  Pose.h  UI.cpp  driver.cpp  interface.cpp  main.cpp  ui.cpp  ui.h
src/exr2hdr/: CMakeLists.txt  main.cpp
src/exrscale/: main.cpp
src/frontend/: CMakeLists.txt
src/generator/: BVHAdapter.h  BVHIO.h  CMakeLists.txt  Generator.cpp  Generator.h  GeneratorBSDF.cpp  GeneratorBSDF.h  GeneratorContext.cpp  GeneratorContext.h  GeneratorEntity.cpp  GeneratorEntity.h  GeneratorEnvironment.cpp  GeneratorEnvironment.h  GeneratorLight.cpp  GeneratorLight.h  GeneratorShape.cpp  GeneratorShape.h  GeneratorTexture.cpp  GeneratorTexture.h  IO.cpp  IO.h  Loader.cpp  Loader.h  SceneBVHAdapter.h  Target.h  TriBVHAdapter.h  main.cpp
src/hardware/: CMakeLists.txt  hwinfo.cpp
src/hdr2exr/: CMakeLists.txt
src/klems/: CMakeLists.txt
src/python/: CMakeLists.txt  api.cpp
src/runtime/: Buffer.h  CDF.cpp  CDF.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Camera.h  Color.h  ExternalProcess.cpp  ExternalProcess.h  IG_Config.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  Logger.cpp  Logger.h  ParameterDescSet.h  ParameterSet.cpp  ParameterSet.h  RenderPass.cpp  RenderPass.h  Runtime.cpp  Runtime.h  RuntimeInfo.cpp  RuntimeInfo.h  RuntimeSettings.h  RuntimeStructs.cpp  RuntimeStructs.h  (+13 more)
(+2090 files in other folders)
